--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-"Hello World" 
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+
+  		<title>CodeSquirl</title>
+  		<meta name="description" content="CodeSquirl squirreling away nuggets of code.">
+  		<meta name="author" content="CodeSquirl">
+
+  		<link rel="stylesheet" href="css/codesquirl.css?v=1.0">
+	</head>
+<body>
+	<div class="cs-flex-center cs-fullscreen">
+		<div style="text-align: center;">
+			<img src="img/codesquirl.png" class="cs-maintain" />
+			<br />
+			codesquirl @ gmx.com
+		</div>
+	</div>
+</body>
+</html>
