--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div style="text-align: center;">
 			<img src="img/codesquirl.png" class="cs-maintain" />
 			<br />
-			codesquirl @ gmx.com
+			codesquirl @ gmail.com
 		</div>
 	</div>
 </body>
