--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 		<div style="text-align: center;">
 			<img src="img/codesquirl.png" class="cs-maintain" />
 			<br />
+			<h3><a href="FormationSystem/">Formation System</a></h3>
+			<div class="cs-pad-16">
 			codesquirl @ gmail.com
+			</div>
 		</div>
 	</div>
 </body>
